--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <div class="col-12 my-auto">
           <div class="masthead-content text-white py-5 py-md-0">
             <h1 class="mb-3">Coming Soon!</h1>
-            <p class="mb-5">We're working hard to finish the development of this site. Our target launch date is
-              <strong>January 2019</strong>! Sign up for updates using the form below!</p>
-            <div class="input-group input-group-newsletter">
+            <p class="mb-5">We're working truly hard to finish the development of this woderful website. Our tageted launch date is around
+              <strong>July 2020</strong>! /*Sign up for updates using the form below!*/</p>
+            /*<div class="input-group input-group-newsletter">
               <input type="email" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="submit-button">
               <div class="input-group-append">
                 <button class="btn btn-secondary" type="button" id="submit-button">Notify Me!</button>
               </div>
-            </div>
+            </div>*/
           </div>
         </div>
       </div>
